<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDoList</string>

    <!-- Activity titles -->
    <string name="activity_main_title">Task categories</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_tasks_title">My tasks list</string>
    <string name="activity_task_title_create">Add new task</string>
    <string name="activity_task_title_edit">Edit task</string>
    <string name="activity_category_title_create">Add new category</string>
    <string name="activity_category_title_edit">Edit category</string>

    <!-- TaskActivity field labels -->
    <string name="label_task_title">Task to do…</string>
    <string name="label_task_category">Category:</string>
    <string name="label_task_priority">Priority</string>
    <string name="label_task_reminder">Reminder:</string>
    <string name="label_task_all_day">All day:</string>
    <string name="label_task_date">Date</string>
    <string name="label_task_time">Time</string>
    <string name="label_task_description">Description…</string>

    <string name="label_task_select_category">Select a category:</string>

    <!-- TaskActivity field errors -->
    <string name="field_error_task_title_empty">Write something to do</string>
    <string name="field_error_task_title_too_long">Too much for a title</string>
    <string name="field_error_task_date_empty">Select a date</string>
    <string name="field_error_task_time_empty">Select a time</string>

    <!-- Task priorities -->
    <string name="priority_normal">Normal</string>
    <string name="priority_high">High</string>
    <string name="priority_urgent">Urgent!</string>

    <!-- Calendar utils -->
    <string name="calendar_yesterday">Yesterday</string>
    <string name="calendar_today">Today</string>
    <string name="calendar_tomorrow">Tomorrow</string>

    <!-- AlertDialog delete task -->
    <string name="alert_dialog_delete_task_title">Delete task</string>
    <string name="alert_dialog_delete_task_message">Are you sure that you want to delete this task?</string>

    <!-- AlertDialog delete category -->
    <string name="alert_dialog_delete_category_title">Delete category</string>
    <string name="alert_dialog_delete_category_message">Are you sure that you want to delete this category? Deleting the category will delete all tasks that\'s belongs to it</string>

    <!-- AlertDialog permissions -->
    <string name="alert_dialog_permissions_title">Enable permissions</string>
    <string name="alert_dialog_permissions_message">You must enable permissions for the app to show notifications, otherwise, scheduled reminders wont show any notification!</string>

    <!-- Actions for buttons and menus -->
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_check">Check</string>
    <string name="action_uncheck">Uncheck</string>

    <!-- Category filters -->
    <string name="filter_today">Today</string>
    <string name="filter_scheduled">Scheduled</string>
    <string name="filter_all">All</string>
    <string name="filter_priority">With priority</string>
    <string name="filter_completed">Completed</string>
    <string name="filter_new">New category</string>

    <!-- CategoryActivity field labels -->
    <string name="label_category_title">Category…</string>
    <string name="label_category_color">Color:</string>
    <string name="label_category_icon">Icon:</string>

    <!-- CategoryActivity field errors -->
    <string name="field_error_category_title_empty">Category name cannot be empty!</string>
    <string name="field_error_category_title_too_long">Category name too long!</string>
    <string name="add_category_success_message">Category added successfully</string>
</resources>