<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/activity_task_title_create"
            app:titleCentered="true"
            app:subtitleCentered="true"
            app:navigationIcon="@drawable/ic_close"
            app:menu="@menu/menu_activity_create"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="64dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Content -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Task title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_task_title"
                app:startIconDrawable="@drawable/ic_edit"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_task_category"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categoryChip"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category"
                    app:chipIcon="@drawable/ic_inbox"
                    app:ensureMinTouchTargetSize="true"
                    android:textColor="@color/white"
                    app:chipIconTint="@color/white"
                    app:chipBackgroundColor="@color/md_theme_primary"/>

            </LinearLayout>

            <!-- Priority -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priorityTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_task_priority"
                app:startIconDrawable="@drawable/ic_priority"
                android:layout_marginTop="16dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/priorityAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/priority"
                    android:text="@string/priority_normal"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Reminder -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_task_reminder"
                    android:textStyle="bold"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/reminderSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- All day -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_task_all_day"
                    android:textStyle="bold"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/allDaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </LinearLayout>

            <!-- Date & Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Date -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateTextField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:hint="@string/label_task_date"
                    app:startIconDrawable="@drawable/ic_calendar"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:clickable="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"/>

                <!-- Time -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeTextField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:hint="@string/label_task_time"
                    app:startIconDrawable="@drawable/ic_clock"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:clickable="true"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Task description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/label_task_description"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_margin="24dp"
                android:text="@string/action_save"
                app:icon="@drawable/ic_save"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>