<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.CategoryActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/activity_category_title_create"
            app:titleCentered="true"
            app:subtitleCentered="true"
            app:navigationIcon="@drawable/ic_close"
            app:menu="@menu/menu_activity_create"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="128dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Content -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Category preview -->
            <androidx.cardview.widget.CardView
                android:id="@+id/colorCardView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="40dp"
                app:cardBackgroundColor="@color/md_theme_primary"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iconImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_clock"
                    app:tint="@color/white"/>

            </androidx.cardview.widget.CardView>

            <!-- Category title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_category_title"
                app:startIconDrawable="@drawable/ic_edit"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Category color -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category_color"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_color"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="6"
                tools:itemCount="12"/>

            <!-- Category icon -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category_icon"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/iconsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_icon"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="6"
                tools:itemCount="42"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="24dp"
        android:text="@string/action_save"
        app:icon="@drawable/ic_save"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>